--- a/src/styles/components/Message.scss
+++ b/src/styles/components/Message.scss
@@ -6,7 +6,7 @@
     padding: 10px;
     max-width: 60%;
     border-radius: 10px;
-    display:block;
+    display: block;
     white-space: pre-wrap;
     word-break: break-word;
   }
@@ -27,7 +27,7 @@
     border-bottom-right-radius: 0px;
   }
 
-  li.bot {
+  li.opsdroid {
     float: left;
     background-color: $opsdroid-grey;
     color: black;
@@ -52,7 +52,7 @@
     color: $opsdroid-grey-dark;
   }
 
-  li.time {
+  li.timestamp {
     background-color: transparent;
     font-size: 0.8em;
     color: $opsdroid-grey-dark;
