Handle image messages, show small image, link image and style

--- a/src/styles/components/Message.scss
+++ b/src/styles/components/Message.scss
@@ -25,6 +25,10 @@
     background-color: $opsdroid-blue;
     color: white;
     border-bottom-right-radius: 0px;
+
+    .image-url {
+      color: white;
+    }
   }
 
   li.opsdroid {
@@ -32,14 +36,21 @@
     background-color: $opsdroid-grey;
     color: black;
     border-bottom-left-radius: 0px;
+
+    .image-url {
+      color: black;
+    }
   }
 
   li.image {
     content: '';
     display: block;
+    margin-top: .5rem;
     padding-top: 45%;
-    min-width: 45%;
-    background-size: cover;
+    min-width: 100%;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
   }
 
   li.info {
