Initial work on the navbar for settings

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,3 +7,4 @@
 @import 'components/Conversation';
 @import 'components/Message';
 @import 'components/UpdateMessage';
+@import 'components/Navbar.scss';
