--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -8,3 +8,4 @@ $opsdroid-grey-medium: darken($opsdroid-grey, 10%);
 $opsdroid-grey-dark: darken($opsdroid-grey, 30%);
 $opsdroid-grey-light: lighten($opsdroid-grey, 2%);
 $opsdroid-blue: #176587;
+$tertiary: #FFFF;
