--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -2,6 +2,8 @@ $prompt-height: 40px;
 $send-width: 60px;
 $status-indicator-size: 8px;
 $spacing: 1rem;
+$input-height: $prompt-height;
+$elements-size: 1.5rem;
 
 // Colours
 $opsdroid-grey: #ebebeb;
@@ -10,5 +12,15 @@ $opsdroid-grey-dark: darken($opsdroid-grey, 30%);
 $opsdroid-grey-light: lighten($opsdroid-grey, 2%);
 $opsdroid-blue: #176587;
 $primary: #176587;
+$primary-medium: #1E86B3;
+$primary-light:  #29A5DB;
+$primary-lightest: #D8EEF8;
+$secondary: #22B573;
+$black: #041016;
+$grey: #E5E9EB;
+$dark: #101D23;
+$dark-medium: #2B363B;
+$dark-light: #4A5A5E;
+$dark-lightest: #7C8C8F;
 
 $tertiary: #FFFF;
