--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -2,7 +2,7 @@ $prompt-height: 40px;
 $send-width: 60px;
 $status-indicator-size: 10px;
 $spacing: 1rem;
-$input-height: $prompt-height;
+$input-height: 2rem;
 $elements-size: 1.5rem;
 
 // Colours
