--- a/src/styles/components/Navbar.scss
+++ b/src/styles/components/Navbar.scss
@@ -8,6 +8,9 @@
     justify-content: space-between;
     align-items: center;
     padding: 0 .5rem;
+    position:fixed;
+    z-index:10;
+    top: 0;
 
     .icon {
         color: $tertiary;
