--- a/src/styles/components/Settings.scss
+++ b/src/styles/components/Settings.scss
@@ -1,14 +1,14 @@
 @import "../vars";
 
 #settings {
-  // position: fixed;
+  position: absolute;
   min-height: 100vh;
   width: 100%;
   left: 0px;
-  bottom: $prompt-height;
   background-color: $tertiary;
   border-bottom: 1px solid $opsdroid-grey;
   padding: 0 $spacing;
+  z-index: 5;
 }
 
 #settings.active {
