--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,4 +1,5 @@
 @import 'vars';
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700;900&display=swap');
 
 ::-webkit-scrollbar {
   display: none;
@@ -10,7 +11,7 @@
 
 body {
   font-size: 12px;
-  font-family: sans-serif;
+  font-family: 'Raleway', sans-serif;
   margin: 0;
   letter-spacing: .03em;
   line-height: 1.6;
@@ -85,4 +86,5 @@ button {
 
 .active {
   display: block;
+  visibility: visible !important;
 }
