--- a/src/styles/components/Message.scss
+++ b/src/styles/components/Message.scss
@@ -20,7 +20,7 @@
       margin-right: .5rem;
     }
 
-    .user-icon, .opsdroid-icon {
+    .user-icon, .opsdroid-icon, .user-avatar {
       height: 50px;
       width: 50px;
       color: $tertiary;
